--- a/ControlVehicular/Views/Conductor/EmpresaConductor.cshtml
+++ b/ControlVehicular/Views/Conductor/EmpresaConductor.cshtml
@@ -82,34 +82,34 @@
                     <div class="row">
                         <div class="form-group col-md-4">
                             <div>
-                                @Html.LabelFor(m => m.FileCedulaImg, new { @class = "custom-file-upload" })
+                                @Html.LabelFor(m => m.FileCedulaImg, new { @class = "" })
                                 @Html.TextBoxFor(m => m.FileCedulaImg, new { type = "file", name = "files" })
                                 @Html.ValidationMessageFor(m => m.FileCedulaImg)
                             </div>
                             <div class="wrapper">
                                 <div class="imageSelector">
-                                    <img id="imagenPreviewCedula"  class="imgs" alt="Cédula"  width="100%" height="100%" />
+                                    <img id="imagenPreviewCedula"  class="imageSelected imgs"  alt=""  width="100%" height="100%" />
                                     <span class="editImage" onclick="triggerUpload(event, '#formAgregarConductor #FileCedulaImg');"><i class="fa fa-pencil"></i></span>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group col-md-4">
                             <div>
-                                @Html.LabelFor(m => m.FileLicenciaImg, new { @class = "custom-file-upload" })
+                                @Html.LabelFor(m => m.FileLicenciaImg, new { @class = "" })
                                 @Html.TextBoxFor(m => m.FileLicenciaImg, new { type = "file", name = "files" })
                                 @Html.ValidationMessageFor(m => m.FileLicenciaImg)
                             </div>
                             <div class="wrapper">
                                 <div class="imageSelector">
-                                    <img id="imagenPreviewLicencia"  class="imgs" alt="Licencia"  width="100%" height="100%" />
+                                    <img id="imagenPreviewLicencia"  class="imageSelected imgs" alt=""  width="100%" height="100%" />
                                     <span class="editImage" onclick="triggerUpload(event, '#formAgregarConductor #FileLicenciaImg');"><i class="fa fa-pencil"></i></span>
                                 </div>
                             </div>
                         </div>
                         </div>
                     <div class="modal-footer">
-                        <button type="button" onclick="guardarConductor()" class="btn-info"><i class="fa fa-plus"></i> Agregar</button>
-                        <button type="button" class="btn-default" data-dismiss="modal">Cancelar</button>
+                        <button type="button" onclick="guardarConductor()" class="btn btn-info"><i class="fa fa-plus"></i> Agregar</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
                     </div>
                 </div>
             </div>
@@ -160,7 +160,7 @@
                                                                 <div class="row">
                                                                     <div class="form-group col-md-4">
                                                                         <div>
-                                                                            @Html.LabelFor(m => m.FileCedulaImgEditar, new { @class = "custom-file-upload" })
+                                                                            @Html.LabelFor(m => m.FileCedulaImgEditar, new { @class = "" })
                                                                             @Html.TextBoxFor(m => m.FileCedulaImgEditar, new { type = "file", name = "files" })
                                                                             @Html.ValidationMessageFor(m => m.FileCedulaImgEditar)
                                                                         </div>
@@ -173,7 +173,7 @@
                                                                     </div>
                                                                     <div class="form-group col-md-4">
                                                                         <div>
-                                                                            @Html.LabelFor(m => m.FileLicenciaImgEditar, new { @class = "custom-file-upload" })
+                                                                            @Html.LabelFor(m => m.FileLicenciaImgEditar, new { @class = "" })
                                                                             @Html.TextBoxFor(m => m.FileLicenciaImgEditar, new { type = "file", name = "files" })
                                                                             @Html.ValidationMessageFor(m => m.FileLicenciaImgEditar)
                                                                         </div>
@@ -189,8 +189,8 @@
                                                             </div>
                                                             <div class="modal-footer">
                                                                 <button type="button" onclick="guardarEditarConductor()" class="btn-info"><i class="fa fa-plus"></i> Guardar</button>
-                                                                <button type="button" onclick="borrarConductor()" class="btn-danger"><i class="fa fa-trash"></i> Eliminar</button>
-                                                                <button type="button" class="btn-default" data-dismiss="modal">Cancelar</button>
+                                                                <button type="button" onclick="borrarConductor()" class="btn btn-danger"><i class="fa fa-trash"></i> Eliminar</button>
+                                                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
                                                             </div>
                                                         </div>
         }
