--- a/ControlVehicular/Views/ClienteRuta/RutaClientesEmpresa.cshtml
+++ b/ControlVehicular/Views/ClienteRuta/RutaClientesEmpresa.cshtml
@@ -18,8 +18,8 @@
        data-search="true"
        data-pagination="true"
        data-minimum-count-columns="2"
-       data-id-field="Codigo"
-       data-unique-id="Codigo"
+       data-id-field="codigo"
+       data-unique-id="codigo"
        data-page-size="8"
        data-show-footer="false">
     <thead>
@@ -113,6 +113,94 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" onclick="GuardarClienteRuta()" class="btn btn-outline-info"> Guardar</button>
+                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        }
+    </div>
+</div>
+
+
+
+<div id="modalEditarClienteRuta" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        @using (Html.BeginForm("", "", FormMethod.Post, new { id = "formEditarClienteRuta" }))
+        {
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Editar un Seguro</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row" id="select01">
+                        <div class="form-group col-md-12">
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.NombreRuta)
+                                @Html.DropDownListFor(m => m.NombreRuta, // 1. Store selected value in Model.State;
+                                                                         // when page is rendered after postback,
+                                                                         // take selected value from Model.State.
+
+                                              // 2. Take list of values from Model.States
+                                              Model.Rutas,
+
+                                              // 3. Text for the first 'default' option
+                                              "- Escoja una Ruta -",
+
+                                              //4. A class name to assign to <select> tag
+                                              new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.NombreRuta, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row" id="select02">
+                        <div class="form-group col-md-12">
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.NombrePadreCliente)
+                                @Html.DropDownListFor(m => m.NombrePadreCliente, // 1. Store selected value in Model.State;
+                                                                                 // when page is rendered after postback,
+                                                                                 // take selected value from Model.State.
+
+                                              // 2. Take list of values from Model.States
+                                              Model.PadreClientes,
+
+                                              // 3. Text for the first 'default' option
+                                              "- Escoja un padre -",
+
+                                              //4. A class name to assign to <select> tag
+                                              new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.NombrePadreCliente, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="row">
+                        <div class="form-group col-md-12">
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.NombreHijoCliente)
+                                @Html.DropDownListFor(m => m.NombreHijoCliente, // 1. Store selected value in Model.State;
+                                                                                // when page is rendered after postback,
+                                                                                // take selected value from Model.State.
+
+                                              // 2. Take list of values from Model.States
+                                              Model.HijosPadre,
+
+                                              // 3. Text for the first 'default' option
+                                              "- Escoja un hijo -",
+
+                                              //4. A class name to assign to <select> tag
+                                              new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.NombreHijoCliente, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" onclick="guardarEditarClienteRuta()" class="btn btn-outline-info"> Guardar</button>
                     <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cerrar</button>
                 </div>
             </div>
